2003/10/03 13:19 muppetman

	* pm/SimpleList.pm, t/19.GtkSimpleList.t: argument checks in the new
	and new_from_treeview constructors.  new_from_treeview no longer
	allows you to pass undef for the treeview, new creates one.

2003/10/01 11:20 rwmcfa1

	* Glib/GBoxed.xs, Glib/GLog.xs, Glib/GObject.xs, Glib/GSignal.xs,
        Glib/GType.xs, Glib/gperl.h, Gtk2/xs/GtkAccelGroup.xs,
        Gtk2/xs/GtkIconFactory.xs, Gtk2/xs/GtkListStore.xs,
        Gtk2/xs/GtkObject.xs, Gtk2/xs/GtkToolbar.xs, Gtk2/xs/GtkTreeView.xs,
        Gtk2/xs/GtkWidget.xs: // comments -> /*

2003/09/30 20:19 rwmcfa1

	* pm/SimpleList.pm: fixed bugs with push and unshift not taking arrays
	for pushing, only first element was getting pushed. pointed out by
	Bjarne Steinsbø

	* examples/simplelist.pl: example of push/unshift array of arrays
	
	* t/19.GtkSimpleList.t: tests of push/unshift array of arrays

	* xs/GtkClipboard.xs: removed an unused function destroy_data, quited 
	some warnings in the same style as currently done.

2003/09/28 20:19 rwmcfa1

	* xs/GdkWindow.xs: bugs found in _for_display functions, not accepting 
	class arguments.

2003/09/26 16:42 muppetman

	* pm/SimpleList.pm: be defensive and use exists() to check whether
	keys already exist in %column_types; this fixes a bug reported by
	Jaap Karssenberg, where supply a bad column type would tell you that
	column type was invalid, but include that bad name in the list of
	valid keys (because of autovivification).  (a lot of explaining for
	a simple bug.)

2003/09/26 26:25 rwmcfa1

	* xs/GtkTextView.xs: new_with_buffer had class param but no spec for it
	this was not a bug, but now it's like everything else thoughout the 
	whole of Gtk2.

2003/09/26 03:45 muppetman

	* Gtk2.pm, README, META.yml, debian/changelog: prep for 1.00rc3 release

	* pm/SimpleList.pm: Gtk2::SimpleList->new_from_treeview allows an
	existing Gtk2::TreeView to be turned into a SimpleList.  intended
	for Glade users.
